ass5_21CS30003_21CS30023/y.output
Terminals unused in grammar

    OTHERS
    TYPEDEF
    HASH


Grammar

    0 $accept: translation_unit $end

    1 changetable: ε

    2 constant: INTEGER_CONST
    3         | FLOAT_CONST
    4         | CHAR_CONST
    5         | STRING_LITERAL

    6 primary_expression: IDENTIFIER
    7                   | constant
    8                   | OPENRB expression CLOSERB

    9 postfix_expression: primary_expression
   10                   | postfix_expression OPENSB expression CLOSESB
   11                   | postfix_expression OPENRB argument_expression_list_opt CLOSERB
   12                   | postfix_expression DOT IDENTIFIER
   13                   | postfix_expression RIGHTARROW IDENTIFIER
   14                   | postfix_expression PLUSPLUS
   15                   | postfix_expression MINUSMINS
   16                   | OPENRB type_name CLOSERB OPENCB initializer_list CLOSECB
   17                   | OPENRB type_name CLOSERB OPENCB initializer_list COMMA CLOSECB

   18 argument_expression_list: assignment_expression
   19                         | argument_expression_list COMMA assignment_expression

   20 argument_expression_list_opt: argument_expression_list
   21                             | ε

   22 unary_expression: postfix_expression
   23                 | PLUSPLUS unary_expression
   24                 | MINUSMINS unary_expression
   25                 | unary_operator cast_expression
   26                 | SIZEOF unary_expression
   27                 | SIZEOF OPENRB type_name CLOSERB

   28 unary_operator: BAND
   29               | KSTAR
   30               | PLUS
   31               | MINUS
   32               | TILDA
   33               | NOT

   34 cast_expression: unary_expression
   35                | OPENRB type_name CLOSERB cast_expression

   36 multiplicative_expression: cast_expression
   37                          | multiplicative_expression KSTAR cast_expression
   38                          | multiplicative_expression DIVIDE cast_expression
   39                          | multiplicative_expression MODULO cast_expression

   40 additive_expression: multiplicative_expression
   41                    | additive_expression PLUS multiplicative_expression
   42                    | additive_expression MINUS multiplicative_expression

   43 shift_expression: additive_expression
   44                 | shift_expression LEFTS additive_expression
   45                 | shift_expression RIGHTS additive_expression

   46 relational_expression: shift_expression
   47                      | relational_expression LESSTHAN shift_expression
   48                      | relational_expression GREATERTHAN shift_expression
   49                      | relational_expression LESSEQUAL shift_expression
   50                      | relational_expression GREATEREQUAL shift_expression

   51 equality_expression: relational_expression
   52                    | equality_expression EQUALEQUAL relational_expression
   53                    | equality_expression NOTEQUAL relational_expression

   54 and_expression: equality_expression
   55               | and_expression BAND equality_expression

   56 exclusive_or_expression: and_expression
   57                        | exclusive_or_expression XOR and_expression

   58 inclusive_or_expression: exclusive_or_expression
   59                        | inclusive_or_expression BITWISEOR exclusive_or_expression

   60 logical_and_expression: inclusive_or_expression
   61                       | logical_and_expression AND M inclusive_or_expression

   62 logical_or_expression: logical_and_expression
   63                      | logical_or_expression OR M logical_and_expression

   64 conditional_expression: logical_or_expression
   65                       | logical_or_expression QUESTIONMARK expression COLON conditional_expression

   66 assignment_expression: conditional_expression
   67                      | unary_expression assignment_operator assignment_expression

   68 assignment_operator: EQUAL
   69                    | MULEQUAL
   70                    | DIVEQUAL
   71                    | MODEQUAL
   72                    | PLUSEQUAL
   73                    | MINUSEQUAL
   74                    | SHIFTLEQUAL
   75                    | SHIFTREQUAL
   76                    | ANDEQUAL
   77                    | XOREQUAL
   78                    | OREQUAL

   79 expression: assignment_expression
   80           | expression COMMA assignment_expression

   81 constant_expression: conditional_expression

   82 declaration: declaration_specifiers init_declarator_list_opt SEMICOLON

   83 init_declarator_list_opt: init_declarator_list
   84                         | ε

   85 declaration_specifiers: storage_class_specifier declaration_specifiers_opt
   86                       | type_specifier declaration_specifiers_opt
   87                       | type_qualifier declaration_specifiers_opt
   88                       | function_specifier declaration_specifiers_opt

   89 declaration_specifiers_opt: declaration_specifiers
   90                           | ε

   91 init_declarator_list: init_declarator
   92                     | init_declarator_list COMMA init_declarator

   93 init_declarator: declarator
   94                | declarator EQUAL initializer

   95 storage_class_specifier: EXTERN
   96                        | STATIC
   97                        | AUTO
   98                        | REGISTER

   99 type_specifier: VOID
  100               | CHAR
  101               | SHORT
  102               | INT
  103               | LONG
  104               | FLOAT
  105               | DOUBLE
  106               | SIGNED
  107               | UNSIGNED
  108               | _BOOL
  109               | _COMPLEX
  110               | _IMAGINARY
  111               | enum_specifier
  112               | struct_or_union_specifier

  113 specifier_qualifier_list: type_specifier specifier_qualifier_list_opt
  114                         | type_qualifier specifier_qualifier_list_opt

  115 specifier_qualifier_list_opt: specifier_qualifier_list
  116                             | ε

  117 struct_or_union_specifier: struct_or_union OPENCB struct_declaration_list CLOSECB
  118                          | struct_or_union IDENTIFIER OPENCB struct_declaration_list CLOSECB
  119                          | struct_or_union IDENTIFIER

  120 struct_or_union: STRUCT
  121                | UNION

  122 struct_declaration_list: struct_declaration
  123                        | struct_declaration_list struct_declaration

  124 struct_declaration: specifier_qualifier_list SEMICOLON
  125                   | specifier_qualifier_list struct_declarator_list SEMICOLON

  126 struct_declarator_list: struct_declarator
  127                       | struct_declarator_list COMMA struct_declarator

  128 struct_declarator: COLON constant_expression
  129                  | declarator COLON constant_expression
  130                  | declarator

  131 enum_specifier: ENUM identifier_opt OPENCB enumerator_list CLOSECB
  132               | ENUM identifier_opt OPENCB enumerator_list COMMA CLOSECB
  133               | ENUM IDENTIFIER

  134 identifier_opt: IDENTIFIER
  135               | ε

  136 enumerator_list: enumerator
  137                | enumerator_list COMMA enumerator

  138 enumerator: IDENTIFIER
  139           | IDENTIFIER EQUAL constant_expression

  140 type_qualifier: CONST
  141               | RESTRICT
  142               | VOLATILE

  143 function_specifier: INLINE

  144 declarator: pointer direct_declarator
  145           | direct_declarator

  146 direct_declarator: IDENTIFIER
  147                  | OPENRB declarator CLOSERB
  148                  | direct_declarator OPENSB type_qualifier_list assignment_expression CLOSESB
  149                  | direct_declarator OPENSB type_qualifier_list CLOSESB
  150                  | direct_declarator OPENSB assignment_expression CLOSESB
  151                  | direct_declarator OPENSB CLOSESB
  152                  | direct_declarator OPENSB STATIC type_qualifier_list assignment_expression CLOSESB
  153                  | direct_declarator OPENSB STATIC assignment_expression CLOSESB
  154                  | direct_declarator OPENSB type_qualifier_list KSTAR CLOSESB
  155                  | direct_declarator OPENSB KSTAR CLOSESB
  156                  | direct_declarator OPENRB changetable parameter_type_list CLOSERB
  157                  | direct_declarator OPENRB identifier_list CLOSERB
  158                  | direct_declarator OPENRB changetable CLOSERB

  159 type_qualifier_list_opt: type_qualifier_list
  160                        | ε

  161 pointer: KSTAR type_qualifier_list_opt
  162        | KSTAR type_qualifier_list_opt pointer

  163 type_qualifier_list: type_qualifier
  164                    | type_qualifier_list type_qualifier

  165 parameter_type_list: parameter_list
  166                    | parameter_list COMMA DOTDOTDOT

  167 parameter_list: parameter_declaration
  168               | parameter_list COMMA parameter_declaration

  169 parameter_declaration: declaration_specifiers declarator
  170                      | declaration_specifiers

  171 identifier_list: IDENTIFIER
  172                | identifier_list COMMA IDENTIFIER

  173 type_name: specifier_qualifier_list

  174 initializer: assignment_expression
  175            | OPENCB initializer_list CLOSECB
  176            | OPENCB initializer_list COMMA CLOSECB

  177 initializer_list: designation_opt initializer
  178                 | initializer_list COMMA designation_opt initializer

  179 designation_opt: designation
  180                | ε

  181 designation: designator_list EQUAL

  182 designator_list: designator
  183                | designator_list designator

  184 designator: OPENSB constant_expression CLOSESB
  185           | DOT IDENTIFIER

  186 statement: labeled_statement
  187          | compound_statement
  188          | expression_statement
  189          | selection_statement
  190          | iteration_statement
  191          | jump_statement

  192 loop_statement: labeled_statement
  193               | expression_statement
  194               | selection_statement
  195               | iteration_statement
  196               | jump_statement

  197 labeled_statement: IDENTIFIER COLON M statement
  198                  | CASE constant_expression COLON statement
  199                  | DEFAULT COLON statement

  200 compound_statement: OPENCB X changetable block_item_list_opt CLOSECB

  201 block_item_list: block_item
  202                | block_item_list M block_item

  203 block_item_list_opt: block_item_list
  204                    | ε

  205 block_item: declaration
  206           | statement

  207 expression_statement: SEMICOLON
  208                     | expression SEMICOLON

  209 selection_statement: IF OPENRB expression N CLOSERB M statement N
  210                    | IF OPENRB expression N CLOSERB M statement N ELSE M statement
  211                    | SWITCH OPENRB expression CLOSERB statement

  212 iteration_statement: WHILE W OPENRB X changetable M expression CLOSERB M loop_statement
  213                    | WHILE W OPENRB X changetable M expression CLOSERB OPENCB M block_item_list_opt CLOSECB
  214                    | DO D M loop_statement M WHILE OPENRB expression CLOSERB SEMICOLON
  215                    | DO D OPENCB M block_item_list_opt CLOSECB M WHILE OPENRB expression CLOSERB SEMICOLON
  216                    | FOR F OPENRB X changetable declaration M expression_statement M expression N CLOSERB M loop_statement
  217                    | FOR F OPENRB X changetable expression_statement M expression_statement M expression N CLOSERB M loop_statement
  218                    | FOR F OPENRB X changetable declaration M expression_statement M expression N CLOSERB M OPENCB block_item_list_opt CLOSECB
  219                    | FOR F OPENRB X changetable expression_statement M expression_statement M expression N CLOSERB M OPENCB block_item_list_opt CLOSECB

  220 jump_statement: GOTO IDENTIFIER SEMICOLON
  221               | CONTINUE SEMICOLON
  222               | BREAK SEMICOLON
  223               | RETURN expression SEMICOLON
  224               | RETURN SEMICOLON

  225 translation_unit: external_declaration
  226                 | translation_unit external_declaration

  227 external_declaration: function_definition
  228                     | declaration

  229 function_definition: declaration_specifiers declarator declaration_list_opt changetable OPENCB block_item_list_opt CLOSECB

  230 declaration_list_opt: declaration_list
  231                     | ε

  232 declaration_list: declaration
  233                 | declaration_list declaration

  234 M: ε

  235 F: ε

  236 W: ε

  237 D: ε

  238 X: ε

  239 N: ε


Terminals, with rules where they appear

    $end (0) 0
    error (256)
    OTHERS (258)
    AUTO (259) 97
    BREAK (260) 222
    CASE (261) 198
    CHAR (262) 100
    CONST (263) 140
    CONTINUE (264) 221
    DEFAULT (265) 199
    DO (266) 214 215
    DOUBLE (267) 105
    ELSE (268) 210
    ENUM (269) 131 132 133
    EXTERN (270) 95
    REGISTER (271) 98
    FLOAT (272) 104
    FOR (273) 216 217 218 219
    GOTO (274) 220
    IF (275) 209 210
    INLINE (276) 143
    INT (277) 102
    LONG (278) 103
    RESTRICT (279) 141
    RETURN (280) 223 224
    SHORT (281) 101
    SIGNED (282) 106
    SIZEOF (283) 26 27
    STATIC (284) 96 152 153
    STRUCT (285) 120
    SWITCH (286) 211
    TYPEDEF (287)
    UNION (288) 121
    UNSIGNED (289) 107
    VOID (290) 99
    VOLATILE (291) 142
    WHILE (292) 212 213 214 215
    _BOOL (293) 108
    _COMPLEX (294) 109
    _IMAGINARY (295) 110
    IDENTIFIER <symp> (296) 6 12 13 118 119 133 134 138 139 146 171 172 185 197 220
    INTEGER_CONST <int_val> (297) 2
    CHAR_CONST <char_val> (298) 4
    FLOAT_CONST <float_val> (299) 3
    STRING_LITERAL <char_val> (300) 5
    OPENSB (301) 10 148 149 150 151 152 153 154 155 184
    CLOSESB (302) 10 148 149 150 151 152 153 154 155 184
    OPENRB (303) 8 11 16 17 27 35 147 156 157 158 209 210 211 212 213 214 215 216 217 218 219
    CLOSERB (304) 8 11 16 17 27 35 147 156 157 158 209 210 211 212 213 214 215 216 217 218 219
    OPENCB (305) 16 17 117 118 131 132 175 176 200 213 215 218 219 229
    CLOSECB (306) 16 17 117 118 131 132 175 176 200 213 215 218 219 229
    DOT (307) 12 185
    RIGHTARROW (308) 13
    PLUSPLUS (309) 14 23
    MINUSMINS (310) 15 24
    BAND (311) 28 55
    KSTAR (312) 29 37 154 155 161 162
    PLUS (313) 30 41
    MINUS (314) 31 42
    TILDA (315) 32
    NOT (316) 33
    DIVIDE (317) 38
    MODULO (318) 39
    LEFTS (319) 44
    RIGHTS (320) 45
    LESSTHAN (321) 47
    GREATERTHAN (322) 48
    LESSEQUAL (323) 49
    GREATEREQUAL (324) 50
    EQUALEQUAL (325) 52
    NOTEQUAL (326) 53
    XOR (327) 57
    BITWISEOR (328) 59
    AND (329) 61
    OR (330) 63
    QUESTIONMARK (331) 65
    COLON (332) 65 128 129 197 198 199
    SEMICOLON (333) 82 124 125 207 208 214 215 220 221 222 223 224
    DOTDOTDOT (334) 166
    EQUAL (335) 68 94 139 181
    MULEQUAL (336) 69
    DIVEQUAL (337) 70
    MODEQUAL (338) 71
    PLUSEQUAL (339) 72
    MINUSEQUAL (340) 73
    SHIFTLEQUAL (341) 74
    SHIFTREQUAL (342) 75
    ANDEQUAL (343) 76
    XOREQUAL (344) 77
    OREQUAL (345) 78
    COMMA (346) 17 19 80 92 127 132 137 166 168 172 176 178
    HASH (347)
    "then" (348)


Nonterminals, with rules where they appear

    $accept (94)
        on left: 0
    changetable (95)
        on left: 1
        on right: 156 158 200 212 213 216 217 218 219 229
    constant <expr> (96)
        on left: 2 3 4 5
        on right: 7
    primary_expression <expr> (97)
        on left: 6 7 8
        on right: 9
    postfix_expression <A> (98)
        on left: 9 10 11 12 13 14 15 16 17
        on right: 10 11 12 13 14 15 22
    argument_expression_list <num_params> (99)
        on left: 18 19
        on right: 19 20
    argument_expression_list_opt <num_params> (100)
        on left: 20 21
        on right: 11
    unary_expression <A> (101)
        on left: 22 23 24 25 26 27
        on right: 23 24 26 34 67
    unary_operator <unaryOp> (102)
        on left: 28 29 30 31 32 33
        on right: 25
    cast_expression <A> (103)
        on left: 34 35
        on right: 25 35 36 37 38 39
    multiplicative_expression <expr> (104)
        on left: 36 37 38 39
        on right: 37 38 39 40 41 42
    additive_expression <expr> (105)
        on left: 40 41 42
        on right: 41 42 43 44 45
    shift_expression <expr> (106)
        on left: 43 44 45
        on right: 44 45 46 47 48 49 50
    relational_expression <expr> (107)
        on left: 46 47 48 49 50
        on right: 47 48 49 50 51 52 53
    equality_expression <expr> (108)
        on left: 51 52 53
        on right: 52 53 54 55
    and_expression <expr> (109)
        on left: 54 55
        on right: 55 56 57
    exclusive_or_expression <expr> (110)
        on left: 56 57
        on right: 57 58 59
    inclusive_or_expression <expr> (111)
        on left: 58 59
        on right: 59 60 61
    logical_and_expression <expr> (112)
        on left: 60 61
        on right: 61 62 63
    logical_or_expression <expr> (113)
        on left: 62 63
        on right: 63 64 65
    conditional_expression <expr> (114)
        on left: 64 65
        on right: 65 66 81
    assignment_expression <expr> (115)
        on left: 66 67
        on right: 18 19 67 79 80 148 150 152 153 174
    assignment_operator (116)
        on left: 68 69 70 71 72 73 74 75 76 77 78
        on right: 67
    expression <expr> (117)
        on left: 79 80
        on right: 8 10 65 80 208 209 210 211 212 213 214 215 216 217 218 219 223
    constant_expression (118)
        on left: 81
        on right: 128 129 139 184 198
    declaration (119)
        on left: 82
        on right: 205 216 218 228 232 233
    init_declarator_list_opt (120)
        on left: 83 84
        on right: 82
    declaration_specifiers (121)
        on left: 85 86 87 88
        on right: 82 89 169 170 229
    declaration_specifiers_opt (122)
        on left: 89 90
        on right: 85 86 87 88
    init_declarator_list (123)
        on left: 91 92
        on right: 83 92
    init_declarator <symp> (124)
        on left: 93 94
        on right: 91 92
    storage_class_specifier (125)
        on left: 95 96 97 98
        on right: 85
    type_specifier (126)
        on left: 99 100 101 102 103 104 105 106 107 108 109 110 111 112
        on right: 86 113
    specifier_qualifier_list (127)
        on left: 113 114
        on right: 115 124 125 173
    specifier_qualifier_list_opt (128)
        on left: 115 116
        on right: 113 114
    struct_or_union_specifier (129)
        on left: 117 118 119
        on right: 112
    struct_or_union (130)
        on left: 120 121
        on right: 117 118 119
    struct_declaration_list (131)
        on left: 122 123
        on right: 117 118 123
    struct_declaration (132)
        on left: 124 125
        on right: 122 123
    struct_declarator_list (133)
        on left: 126 127
        on right: 125 127
    struct_declarator (134)
        on left: 128 129 130
        on right: 126 127
    enum_specifier (135)
        on left: 131 132 133
        on right: 111
    identifier_opt (136)
        on left: 134 135
        on right: 131 132
    enumerator_list (137)
        on left: 136 137
        on right: 131 132 137
    enumerator (138)
        on left: 138 139
        on right: 136 137
    type_qualifier (139)
        on left: 140 141 142
        on right: 87 114 163 164
    function_specifier (140)
        on left: 143
        on right: 88
    declarator <symp> (141)
        on left: 144 145
        on right: 93 94 129 130 147 169 229
    direct_declarator <symp> (142)
        on left: 146 147 148 149 150 151 152 153 154 155 156 157 158
        on right: 144 145 148 149 150 151 152 153 154 155 156 157 158
    type_qualifier_list_opt (143)
        on left: 159 160
        on right: 161 162
    pointer <sym_type> (144)
        on left: 161 162
        on right: 144 162
    type_qualifier_list (145)
        on left: 163 164
        on right: 148 149 152 154 159 164
    parameter_type_list (146)
        on left: 165 166
        on right: 156
    parameter_list (147)
        on left: 167 168
        on right: 165 166 168
    parameter_declaration (148)
        on left: 169 170
        on right: 167 168
    identifier_list (149)
        on left: 171 172
        on right: 157 172
    type_name (150)
        on left: 173
        on right: 16 17 27 35
    initializer <symp> (151)
        on left: 174 175 176
        on right: 94 177 178
    initializer_list (152)
        on left: 177 178
        on right: 16 17 175 176 178
    designation_opt (153)
        on left: 179 180
        on right: 177 178
    designation (154)
        on left: 181
        on right: 179
    designator_list (155)
        on left: 182 183
        on right: 181 183
    designator (156)
        on left: 184 185
        on right: 182 183
    statement <stat> (157)
        on left: 186 187 188 189 190 191
        on right: 197 198 199 206 209 210 211
    loop_statement <stat> (158)
        on left: 192 193 194 195 196
        on right: 212 214 216 217
    labeled_statement <stat> (159)
        on left: 197 198 199
        on right: 186 192
    compound_statement <stat> (160)
        on left: 200
        on right: 187
    block_item_list <stat> (161)
        on left: 201 202
        on right: 202 203
    block_item_list_opt <stat> (162)
        on left: 203 204
        on right: 200 213 215 218 219 229
    block_item <stat> (163)
        on left: 205 206
        on right: 201 202
    expression_statement <expr> (164)
        on left: 207 208
        on right: 188 193 216 217 218 219
    selection_statement <stat> (165)
        on left: 209 210 211
        on right: 189 194
    iteration_statement <stat> (166)
        on left: 212 213 214 215 216 217 218 219
        on right: 190 195
    jump_statement <stat> (167)
        on left: 220 221 222 223 224
        on right: 191 196
    translation_unit (168)
        on left: 225 226
        on right: 0 226
    external_declaration (169)
        on left: 227 228
        on right: 225 226
    function_definition (170)
        on left: 229
        on right: 227
    declaration_list_opt (171)
        on left: 230 231
        on right: 229
    declaration_list (172)
        on left: 232 233
        on right: 230 233
    M <instr_number> (173)
        on left: 234
        on right: 61 63 197 202 209 210 212 213 214 215 216 217 218 219
    F (174)
        on left: 235
        on right: 216 217 218 219
    W (175)
        on left: 236
        on right: 212 213
    D (176)
        on left: 237
        on right: 214 215
    X (177)
        on left: 238
        on right: 200 212 213 216 217 218 219
    N <stat> (178)
        on left: 239
        on right: 209 210 216 217 218 219


State 0

    0 $accept: • translation_unit $end
   82 declaration: • declaration_specifiers init_declarator_list_opt SEMICOLON
   85 declaration_specifiers: • storage_class_specifier declaration_specifiers_opt
   86                       | • type_specifier declaration_specifiers_opt
   87                       | • type_qualifier declaration_specifiers_opt
   88                       | • function_specifier declaration_specifiers_opt
   95 storage_class_specifier: • EXTERN
   96                        | • STATIC
   97                        | • AUTO
   98                        | • REGISTER
   99 type_specifier: • VOID
  100               | • CHAR
  101               | • SHORT
  102               | • INT
  103               | • LONG
  104               | • FLOAT
  105               | • DOUBLE
  106               | • SIGNED
  107               | • UNSIGNED
  108               | • _BOOL
  109               | • _COMPLEX
  110               | • _IMAGINARY
  111               | • enum_specifier
  112               | • struct_or_union_specifier
  117 struct_or_union_specifier: • struct_or_union OPENCB struct_declaration_list CLOSECB
  118                          | • struct_or_union IDENTIFIER OPENCB struct_declaration_list CLOSECB
  119                          | • struct_or_union IDENTIFIER
  120 struct_or_union: • STRUCT
  121                | • UNION
  131 enum_specifier: • ENUM identifier_opt OPENCB enumerator_list CLOSECB
  132               | • ENUM identifier_opt OPENCB enumerator_list COMMA CLOSECB
  133               | • ENUM IDENTIFIER
  140 type_qualifier: • CONST
  141               | • RESTRICT
  142               | • VOLATILE
  143 function_specifier: • INLINE
  225 translation_unit: • external_declaration
  226                 | • translation_unit external_declaration
  227 external_declaration: • function_definition
  228                     | • declaration
  229 function_definition: • declaration_specifiers declarator declaration_list_opt changetable OPENCB block_item_list_opt CLOSECB

    AUTO        shift, and go to state 1
    CHAR        shift, and go to state 2
    CONST       shift, and go to state 3
    DOUBLE      shift, and go to state 4
    ENUM        shift, and go to state 5
    EXTERN      shift, and go to state 6
    REGISTER    shift, and go to state 7
    FLOAT       shift, and go to state 8
    INLINE      shift, and go to state 9
    INT         shift, and go to state 10
    LONG        shift, and go to state 11
    RESTRICT    shift, and go to state 12
    SHORT       shift, and go to state 13
    SIGNED      shift, and go to state 14
    STATIC      shift, and go to state 15
    STRUCT      shift, and go to state 16
    UNION       shift, and go to state 17
    UNSIGNED    shift, and go to state 18
    VOID        shift, and go to state 19
    VOLATILE    shift, and go to state 20
    _BOOL       shift, and go to state 21
    _COMPLEX    shift, and go to state 22
    _IMAGINARY  shift, and go to state 23

    declaration                go to state 24
    declaration_specifiers     go to state 25
    storage_class_specifier    go to state 26
    type_specifier             go to state 27
    struct_or_union_specifier  go to state 28
    struct_or_union            go to state 29
    enum_specifier             go to state 30
    type_qualifier             go to state 31
    function_specifier         go to state 32
    translation_unit           go to state 33
    external_declaration       go to state 34
    function_definition        go to state 35


State 1

   97 storage_class_specifier: AUTO •

    $default  reduce using rule 97 (storage_class_specifier)


State 2

  100 type_specifier: CHAR •

    $default  reduce using rule 100 (type_specifier)


State 3

  140 type_qualifier: CONST •

    $default  reduce using rule 140 (type_qualifier)


State 4

  105 type_specifier: DOUBLE •

    $default  reduce using rule 105 (type_specifier)


State 5

  131 enum_specifier: ENUM • identifier_opt OPENCB enumerator_list CLOSECB
  132               | ENUM • identifier_opt OPENCB enumerator_list COMMA CLOSECB
  133               | ENUM • IDENTIFIER
  134 identifier_opt: • IDENTIFIER
  135               | ε •  [OPENCB]

    IDENTIFIER  shift, and go to state 36

    $default  reduce using rule 135 (identifier_opt)

    identifier_opt  go to state 37


State 6

   95 storage_class_specifier: EXTERN •

    $default  reduce using rule 95 (storage_class_specifier)


State 7

   98 storage_class_specifier: REGISTER •

    $default  reduce using rule 98 (storage_class_specifier)


State 8

  104 type_specifier: FLOAT •

    $default  reduce using rule 104 (type_specifier)


State 9

  143 function_specifier: INLINE •

    $default  reduce using rule 143 (function_specifier)


State 10

  102 type_specifier: INT •

    $default  reduce using rule 102 (type_specifier)


State 11

  103 type_specifier: LONG •

    $default  reduce using rule 103 (type_specifier)


State 12

  141 type_qualifier: RESTRICT •

    $default  reduce using rule 141 (type_qualifier)


State 13

  101 type_specifier: SHORT •

    $default  reduce using rule 101 (type_specifier)


State 14

  106 type_specifier: SIGNED •

    $default  reduce using rule 106 (type_specifier)


State 15

   96 storage_class_specifier: STATIC •

    $default  reduce using rule 96 (storage_class_specifier)


State 16

  120 struct_or_union: STRUCT •

    $default  reduce using rule 120 (struct_or_union)


State 17

  121 struct_or_union: UNION •

    $default  reduce using rule 121 (struct_or_union)


State 18

  107 type_specifier: UNSIGNED •

    $default  reduce using rule 107 (type_specifier)


State 19

   99 type_specifier: VOID •

    $default  reduce using rule 99 (type_specifier)


State 20

  142 type_qualifier: VOLATILE •

    $default  reduce using rule 142 (type_qualifier)


State 21

  108 type_specifier: _BOOL •

    $default  reduce using rule 108 (type_specifier)


State 22

  109 type_specifier: _COMPLEX •

    $default  reduce using rule 109 (type_specifier)


State 23

  110 type_specifier: _IMAGINARY •

    $default  reduce using rule 110 (type_specifier)


State 24

  228 external_declaration: declaration •

    $default  reduce using rule 228 (external_declaration)


State 25

   82 declaration: declaration_specifiers • init_declarator_list_opt SEMICOLON
   83 init_declarator_list_opt: • init_declarator_list
   84                         | ε •  [SEMICOLON]
   91 init_declarator_list: • init_declarator
   92                     | • init_declarator_list COMMA init_declarator
   93 init_declarator: • declarator
   94                | • declarator EQUAL initializer
  144 declarator: • pointer direct_declarator
  145           | • direct_declarator
  146 direct_declarator: • IDENTIFIER
  147                  | • OPENRB declarator CLOSERB
  148                  | • direct_declarator OPENSB type_qualifier_list assignment_expression CLOSESB
  149                  | • direct_declarator OPENSB type_qualifier_list CLOSESB
  150                  | • direct_declarator OPENSB assignment_expression CLOSESB
  151                  | • direct_declarator OPENSB CLOSESB
  152                  | • direct_declarator OPENSB STATIC type_qualifier_list assignment_expression CLOSESB
  153                  | • direct_declarator OPENSB STATIC assignment_expression CLOSESB
  154                  | • direct_declarator OPENSB type_qualifier_list KSTAR CLOSESB
  155                  | • direct_declarator OPENSB KSTAR CLOSESB
  156                  | • direct_declarator OPENRB changetable parameter_type_list CLOSERB
  157                  | • direct_declarator OPENRB identifier_list CLOSERB
  158                  | • direct_declarator OPENRB changetable CLOSERB
  161 pointer: • KSTAR type_qualifier_list_opt
  162        | • KSTAR type_qualifier_list_opt pointer
  229 function_definition: declaration_specifiers • declarator declaration_list_opt changetable OPENCB block_item_list_opt CLOSECB

    IDENTIFIER  shift, and go to state 38
    OPENRB      shift, and go to state 39
    KSTAR       shift, and go to state 40

    $default  reduce using rule 84 (init_declarator_list_opt)

    init_declarator_list_opt  go to state 41
    init_declarator_list      go to state 42
    init_declarator           go to state 43
    declarator                go to state 44
    direct_declarator         go to state 45
    pointer                   go to state 46


State 26

   85 declaration_specifiers: • storage_class_specifier declaration_specifiers_opt
   85                       | storage_class_specifier • declaration_specifiers_opt
   86                       | • type_specifier declaration_specifiers_opt
   87                       | • type_qualifier declaration_specifiers_opt
   88                       | • function_specifier declaration_specifiers_opt
   89 declaration_specifiers_opt: • declaration_specifiers
   90                           | ε •  [IDENTIFIER, OPENRB, CLOSERB, KSTAR, SEMICOLON, COMMA]
   95 storage_class_specifier: • EXTERN
   96                        | • STATIC
   97                        | • AUTO
   98                        | • REGISTER
   99 type_specifier: • VOID
  100               | • CHAR
  101               | • SHORT
  102               | • INT
  103               | • LONG
  104               | • FLOAT
  105               | • DOUBLE
  106               | • SIGNED
  107               | • UNSIGNED
  108               | • _BOOL
  109               | • _COMPLEX
  110               | • _IMAGINARY
  111               | • enum_specifier
  112               | • struct_or_union_specifier
  117 struct_or_union_specifier: • struct_or_union OPENCB struct_declaration_list CLOSECB
  118                          | • struct_or_union IDENTIFIER OPENCB struct_declaration_list CLOSECB
  119                          | • struct_or_union IDENTIFIER
  120 struct_or_union: • STRUCT
  121                | • UNION
  131 enum_specifier: • ENUM identifier_opt OPENCB enumerator_list CLOSECB
  132               | • ENUM identifier_opt OPENCB enumerator_list COMMA CLOSECB
  133               | • ENUM IDENTIFIER
  140 type_qualifier: • CONST
  141               | • RESTRICT
  142               | • VOLATILE
  143 function_specifier: • INLINE

    AUTO        shift, and go to state 1
    CHAR        shift, and go to state 2
    CONST       shift, and go to state 3
    DOUBLE      shift, and go to state 4
    ENUM        shift, and go to state 5
    EXTERN      shift, and go to state 6
    REGISTER    shift, and go to state 7
    FLOAT       shift, and go to state 8
    INLINE      shift, and go to state 9
    INT         shift, and go to state 10
    LONG        shift, and go to state 11
    RESTRICT    shift, and go to state 12
    SHORT       shift, and go to state 13
    SIGNED      shift, and go to state 14
    STATIC      shift, and go to state 15
    STRUCT      shift, and go to state 16
    UNION       shift, and go to state 17
    UNSIGNED    shift, and go to state 18
    VOID        shift, and go to state 19
    VOLATILE    shift, and go to state 20
    _BOOL       shift, and go to state 21
    _COMPLEX    shift, and go to state 22
    _IMAGINARY  shift, and go to state 23

    $default  reduce using rule 90 (declaration_specifiers_opt)

    declaration_specifiers      go to state 47
    declaration_specifiers_opt  go to state 48
    storage_class_specifier     go to state 26
    type_specifier              go to state 27
    struct_or_union_specifier   go to state 28
    struct_or_union             go to state 29
    enum_specifier              go to state 30
    type_qualifier              go to state 31
    function_specifier          go to state 32


State 27

   85 declaration_specifiers: • storage_class_specifier declaration_specifiers_opt
   86                       | • type_specifier declaration_specifiers_opt
   86                       | type_specifier • declaration_specifiers_opt
   87                       | • type_qualifier declaration_specifiers_opt
   88                       | • function_specifier declaration_specifiers_opt
   89 declaration_specifiers_opt: • declaration_specifiers
   90                           | ε •  [IDENTIFIER, OPENRB, CLOSERB, KSTAR, SEMICOLON, COMMA]
   95 storage_class_specifier: • EXTERN
   96                        | • STATIC
   97                        | • AUTO
   98                        | • REGISTER
   99 type_specifier: • VOID
  100               | • CHAR
  101               | • SHORT
  102               | • INT
  103               | • LONG
  104               | • FLOAT
  105               | • DOUBLE
  106               | • SIGNED
  107               | • UNSIGNED
  108               | • _BOOL
  109               | • _COMPLEX
  110               | • _IMAGINARY
  111               | • enum_specifier
  112               | • struct_or_union_specifier
  117 struct_or_union_specifier: • struct_or_union OPENCB struct_declaration_list CLOSECB
  118                          | • struct_or_union IDENTIFIER OPENCB struct_declaration_list CLOSECB
  119                          | • struct_or_union IDENTIFIER
  120 struct_or_union: • STRUCT
  121                | • UNION
  131 enum_specifier: • ENUM identifier_opt OPENCB enumerator_list CLOSECB
  132               | • ENUM identifier_opt OPENCB enumerator_list COMMA CLOSECB
  133               | • ENUM IDENTIFIER
  140 type_qualifier: • CONST
  141               | • RESTRICT
  142               | • VOLATILE
  143 function_specifier: • INLINE
